Updated for bundles support

--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 How to start:
 
 $ cd ../beamjs
-$ ./beamjs -sname beam -pa ../beamjs_misultin/ebin -pa ../beamjs_misultin/deps/misultin/ebin/   -mod http beamjs_misultin -jseval "listenPort=8080" -load ../beamjs_doc_browser/app.js
-
+$ ./beamjs -bundles stdlib erlang node_compat -sname beam -pa ../beamjs_misultin/ebin -pa ../beamjs_misultin/deps/misultin/ebin/   -mod http beamjs_misultin -jseval "listenPort=8080" -load ../beamjs_doc_browser/app.js -toolbar
 
